tests/baselines/reference/generatorTypeCheck22.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck22.ts(8,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck22.ts(9,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck22.ts (2 errors) ====
    class Foo { x: number }
    class Bar extends Foo { y: string }
    class Baz { z: number }
    function* g3() {
        yield;
        yield new Bar;
        yield new Baz;
        yield *[new Bar];
               ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        yield *[new Baz];
               ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    }